[package]
name = "ddb-hedged-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ddb_hedged_request"
path = "src/lib.rs"

[[bin]]
name = "ddb-hedged-request"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.28", features = ["full"] }
rusoto_core = "0.48"
rusoto_dynamodb = "0.48"
futures = "0.3"
uuid = { version = "1.3", features = ["v4"] }
log = "0.4"
log4rs = { version = "1.2", features = ["rolling_file_appender"] }
simplelog = "0.12"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
async-trait = "0.1.58"
num_cpus = "1.13.1"
hdrhistogram = "7.5.2"
clap = { version = "4.5.29", features = ["derive"] }
indicatif = "0.17.3"


